FrontEnd/Modules/TaskAlerts/Css/TaskAlerts.css
@import "../../Base/Scss/base.scss";

html, body {
    height: 100%;
    min-height: 100%;
    width: 100%;
}
    /* TASKS */
    body.taskAlert {
        background-color: var(--white-color);
        overflow-x: hidden;
        max-width: 100%;
    }

#taskList {
    box-sizing: border-box;
    list-style: none;
    min-height: calc(100% - 80px);
    padding: 10px;
    padding-top: 45px;
    max-height: 100vh;
}

    #taskList > li {
        background: rgba(0,0,0,0.05);
        margin-bottom: 10px;
        position: relative;
    }

        #taskList > li#taskHistory {
            background: transparent;
            padding: 10px 0;
            text-align: center;
        }

            #taskList > li#taskHistory > a {
                position: relative;
                color: var(--primary-color);
            }

        #taskList > li.completed {
            overflow: hidden;
            position: relative;
            animation-name: removed;
            animation-duration: 500ms;
            animation-timing-function: ease-in;
            animation-fill-mode: forwards;
        }

        #taskList > li > a {
            position: absolute;
            right: 0;
            bottom: 0;
        }

            #taskList > li > a.edit-task {
                bottom: auto;
                top: 0;
            }

            #taskList > li > a.k-button,
            #taskList > li > a.k-button:hover,
            #taskList > li > a.k-button:active {
                background-color: transparent;
                box-shadow: none;
                border: none;
                padding: 9px;
                margin-right: 0;
            }

                #taskList > li > a.k-button:hover,
                #taskList > li > a.k-button:active {
                    color: var(--primary-color);
                }

@keyframes removed {
    0% {
        left: 0;
    }

    50% {
        left: 110%;
        max-height: 500px;
        margin-bottom: 10px;
    }

    100% {
        left: 110%;
        max-height: 0;
        margin-bottom: 0;
    }
}

#taskList div.taskListItemDetails {
    display: block;
    padding: 10px 10px 10px 40px;
    position: relative;
}

    #taskList div.taskListItemDetails ins {
        background: var(--white-color);
        border: 1px solid rgba(0,0,0,0.1);
        border-radius: 2px;
        height: 18px;
        line-height: 18px;
        position: absolute;
        top: 10px;
        left: 10px;
        text-align: center;
        width: 18px;
    }

    #taskList div.taskListItemDetails input:checked + ins {
        background: var(--color-4);
        border: 1px solid var(--color-4);
    }

    #taskList div.taskListItemDetails ins:before {
        color: var(--white-color);
        display: none;
    }

    #taskList div.taskListItemDetails input:checked + ins:before {
        display: inline-block;
    }

    #taskList div.taskListItemDetails input:disabled + ins {
        background: var(--white-color) !important;
        border: 1px solid rgba(0,0,0,0.25) !important;
    }

        #taskList div.taskListItemDetails input:disabled + ins:before {
            color: rgba(0,0,0,0.25) !important;
        }

    #taskList div.taskListItemDetails > span {
        display: block;
        padding-right: 25px;
    }

    #taskList div.taskListItemDetails > small {
        opacity: 0.6;
        display: block;
    }

    #taskList div.taskListItemDetails > strong {
        border-top: 1px solid rgba(0,0,0,0.08);
        display: block;
        margin-top: 10px;
        padding-top: 6px;
    }

#taskList ~ .actions {
    background: transparent;
    margin: 0;
    position: fixed;
    bottom: 0;
    width: 100%;
}

    #taskList ~ .actions:after {
        clear: both;
        content: "";
        display: table;
    }

#addTask {
    float: right;
    margin: 10px;
    padding: 0;
}

.taskForm, .editTaskForm {
    position: fixed;
    left: 100%;
    bottom: 0;
    width: 100%;
    transition: all 0.3s ease;
    z-index: 100;
}

.taskForm.active, .editTaskForm.active {
    left: 0;
}

.taskForm.active:after, .editTaskForm.active:after {
    content: '';
    display: block;
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: -1;
    background: rgba(0,0,0,0.5);
}

.taskForm .item .actions button {
    min-width: auto;
}

@media screen and (max-width: 1024px) {
    .taskForm, .editTaskForm {
        background: var(--item-bg-color);
        left: -100%;
    }
}

.k-notification {
    width: 100%;
    margin: 0;
}

